components/auth/authForm/AuthForm.module.scss
@use "@/styles/tokens" as tokens;
@use "@/styles/utils/mixins/blur" as blur;


.auth {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;

  &__back {
    position: absolute;
    top: tokens.$space-l;
    left: tokens.$space-l;
    z-index: 2;
    font-family: tokens.$font-family-primary;
    font-size: tokens.$font-size-s;
    font-weight: 500;
    color: tokens.$color-text-light;
    text-decoration: none;
    opacity: 0.9;

    &:hover {
      opacity: 1;
      text-decoration: underline;
    }
  }

  &__strip {
    display: flex;
    width: 200%;
    height: 100%;
    transition: transform 0.5s ease-in-out;
    will-change: transform;

    
    &--shifted {
      transform: translateX(-50%);
    }
  }

  &__panel {
    flex: 0 0 25%;
    width: 25%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: tokens.$space-xxxl tokens.$space-xl;
    box-sizing: border-box;

    &--welcome-dark {
      position: relative;
      overflow: hidden;
      isolation: isolate;
      color: tokens.$color-text-light;
      @include blur.blur(url("../../../public/background/wave-background-1.png"), 2px);
    }

    &--welcome-light {
      background-image: url("../../../public/background/light-screen.png");
      color: tokens.$color-text-dark;
    }

    &--form-light {
      background-image: url("../../../public/background/light-screen.png");
      color: tokens.$color-text-dark;
      
    }

    &--form-dark {
      position: relative;
      overflow: hidden;
      isolation: isolate;
      color: tokens.$color-text-light;
      @include blur.blur(url("../../../public/background/wave-background-2.png"), 2px);
    }
  }

  
  &__welcome {
    max-width: 420px;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: tokens.$space-xl;
  }

  
  &__welcome-title {
    margin: 0;
    font-family: tokens.$font-family-primary;
    font-size: tokens.$font-size-xxl;
    font-weight: 700;
    line-height: tokens.$line-height-tight;
    letter-spacing: 0.02em;
  }

  
  &__welcome-text {
    margin: 0;
    font-family: tokens.$font-family-primary;
    font-size: tokens.$font-size-m;
    line-height: tokens.$line-height-body;
    color: inherit;
    opacity: 0.9;
  }

  
  &__form-wrap {
    width: 100%;
    max-width: 380px;
  }

  
  &__form {
    display: flex;
    flex-direction: column;
    gap: tokens.$space-l;
    align-items: stretch;
  }

  
  &__form-title {
    margin: 0 0 tokens.$space-m;
    font-family: tokens.$font-family-primary;
    font-size: tokens.$font-size-xxl;
    font-weight: 700;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.12em;
    color: inherit;
  }

  &__formError {
    display: block;
    font-size: tokens.$font-size-s;
    font-weight: 500;
    color: #e53935;
    margin-bottom: tokens.$space-xs;
  }

  &__passwordToggle {
    background: none;
    border: none;
    cursor: pointer;
    font-family: tokens.$font-family-primary;
    font-size: tokens.$font-size-xs;
    color: inherit;
    opacity: 0.8;
    padding: 0 tokens.$space-xs;
    white-space: nowrap;

    &:hover {
      opacity: 1;
    }
  }

  &__passwordHint {
    margin: calc(-1 * tokens.$space-s) 0 0;
    font-family: tokens.$font-family-primary;
    font-size: tokens.$font-size-xs;
    line-height: tokens.$line-height-body;
    color: inherit;
    opacity: 0.75;
  }

  &__mobileSwitch {
    display: none;
  }

  @media (max-width: 900px) {
    min-height: 100dvh;
    height: auto;
    overflow-x: hidden;
    overflow-y: auto;

    &__back {
      top: tokens.$space-m;
      left: tokens.$space-m;
      font-size: tokens.$font-size-xs;
    }

    &__strip {
      width: 100%;
      min-height: calc(100dvh - #{tokens.$space-xxxl});
      transform: none !important;
      flex-direction: column;
    }

    &__strip > &__panel--form-light,
    &__strip > &__panel--form-dark {
      display: none;
    }

    &__strip:not(&__strip--shifted) > &__panel--form-light {
      display: flex;
    }

    &__strip--shifted > &__panel--form-dark {
      display: flex;
    }

    &__panel {
      flex: none;
      width: 100%;
      min-height: auto;
      padding: tokens.$space-xxxl tokens.$space-l tokens.$space-xl;

      &--welcome-dark,
      &--welcome-light {
        display: none;
      }
    }

    &__form-wrap {
      max-width: none;
    }

    &__form-title {
      font-size: tokens.$font-size-xl;
      letter-spacing: 0.08em;
    }

    &__welcome-title {
      font-size: tokens.$font-size-xl;
    }

    &__mobileSwitch {
      display: flex;
    }
  }
}

